--- a/Fortuna/wwwroot/index.html
+++ b/Fortuna/wwwroot/index.html
@@ -16,7 +16,7 @@
 <div id="app">Loading...</div>
 
 <div id="blazor-error-ui">
-    An unhandled error has occurred.
+    An unhandled error has occurred. If you are using uBlock Origin, you may need to disable it to view this WASM app.
     <a class="reload" href="">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
