--- a/Fortuna/wwwroot/index.html
+++ b/Fortuna/wwwroot/index.html
@@ -10,6 +10,7 @@
     <link href="_content/Radzen.Blazor/css/default-base.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet"/>
     <link href="Fortuna.styles.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Gill+Sans|Poiret+One" rel="stylesheet"/>
 </head>
 
 <body>
