--- a/Fortuna/wwwroot/index.html
+++ b/Fortuna/wwwroot/index.html
@@ -22,6 +22,7 @@
 </div>
 <script src="_framework/blazor.webassembly.js"></script>
 <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+<script src="js/clipboard.js"></script>
 </body>
 
 </html>
