Adds spinner to loading screen

--- a/Fortuna/wwwroot/index.html
+++ b/Fortuna/wwwroot/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-<div id="app">Loading...</div>
+<div id="app">
+    <div style="position: absolute; top: 50%; left: 50%; margin-right: -50%" class="spinner-border"></div>
+</div>
 
 <div id="blazor-error-ui">
     An unhandled error has occurred. If you are using uBlock Origin, you may need to disable it to view this WASM app.
