--- a/Fortuna/wwwroot/index.html
+++ b/Fortuna/wwwroot/index.html
@@ -14,7 +14,7 @@
 
 <body>
 <div id="app">
-    <div style="position: absolute; top: 50%; left: 50%; margin-right: -50%" class="spinner-border"></div>
+    <div class="spinner-border" style="position: absolute; top: 50%; left: 50%; margin-right: -50%"></div>
 </div>
 
 <div id="blazor-error-ui">
